--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 7%;
-  background-color:#ffe1f3;
+  background-color:#faf7f7;
   position: fixed;
   top: 0;
   left: 0;
